# learn

./: .gitignore  .gitmodules  MEMO.md  README.md  learn.code-workspace  readme.md
learn_cpp/: .clang-format  .clang-tidy  .clangd  CMakeLists.txt  CMakePresets.json  README.md
learn_cpp/cmake/: LearnCppAuto.cmake
learn_cpp/demos/1.miniTensor/: CMakeLists.txt  readme.md
learn_cpp/leetcode/1.lc416/: main.cpp
learn_cpp/leetcode/2.27/: CMakeLists.txt  main.cpp
learn_cpp/leetcode/3.26/: main.cpp
learn_cpp/leetcode/4.80/: main.cpp
learn_cpp/leetcode/5.169/: main.cpp
learn_cpp/leetcode/lc1.416/: CMakeLists.txt  main.cpp
learn_cuda/: .clang-tidy  .clangd  CMakeLists.txt  CMakePresets.json  README.md
learn_cuda/1.vecAdd/: vector_add.cpp
learn_cuda/2.colorToGrayscaleConversion/: colorToGray.cu
learn_cuda/3.blur/: blur.cu
learn_cuda/5.tiling/: tiling2.cu
learn_cuda/cmake/: LearnCudaAuto.cmake
learn_cuda/leetGPU/1.vecAdd/: vector_add.cu
learn_cuda/pmpp/1.vecAdd/: vector_add.cu
learn_cuda/pmpp/4.matrixMul/: matMul.cu
learn_cuda/pmpp/5.tiling/: tiling.cu
learn_pytorch/: __init__.py  note.md
learn_pytorch/1.tensors/: tensor.py
learn_pytorch/2.datasets/: main.py
learn_pytorch/3.transforms/: main.py
learn_pytorch/4.build_model/: main.py
learn_pytorch/5.autogard/: back.md  front.md  latex.md  main.py  my.md  torch_main.py  偏导.md  常用.md  最终说明.md
learn_pytorch/6.opt/: m.pth  main.py
learn_pytorch/common/: __init__.py  logger.py
